# ca-pdf

./: .dockerignore  .env.docker.example  .env.example  .gitignore  API.en.md  API.md  ARCHITECTURE.en.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_RELAXATION_SUMMARY.md  CI_RESTORATION_CHECKLIST.md  CI_STABILITY.md  CI_STABILIZATION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.en.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FLOW_REVIEW.md  DEPLOYMENT_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_SCRIPT_HARDENING.md  DEVELOPMENT.en.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DIAGNOSTIC_REPORT.md  DOCS_USAGE_GUIDE.md  DOCUMENTATION.md  HARDENING_CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NGINX_PROXY_REVISION.md  PROJECT_PROGRESS_ANALYSIS.md  PROJECT_STATUS_SUMMARY.md  README.en.md  README.md  README.zh-CN.md  REFACTOR_SUMMARY.md  (+13 more)
.github/: pull_request_template.md
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  coverage.xml  debug_login.py  pyproject.toml  test_app.db
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/endpoints/: __init__.py  audit.py  auth.py  ca.py  health.py  pdf_signing.py  seals.py  users.py
backend/app/core/: __init__.py  config.py  errors.py  file_validators.py  logging.py  middleware.py  security.py  uploads.py
backend/app/crud/: __init__.py  audit_log.py  ca_artifact.py  certificate.py  role.py  seal.py  token.py  user.py
backend/app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_rename_audit_log_meta.py  0002_rename_audit_log_metadata_to_meta.py  0002_rename_audit_logs_metadata_to_meta.py  0002_rename_audit_meta.py  0002_rename_audit_metadata_to_meta.py  0003_add_username_to_users.py  e681f785a00e_rename_audit_log_metadata_column.py
backend/app/models/: __init__.py  audit_log.py  ca_artifact.py  certificate.py  role.py  seal.py  storage.py  user.py
backend/app/schemas/: __init__.py  audit.py  auth.py  ca.py  error.py  pdf_signing.py  seal.py  user.py
backend/app/services/: __init__.py  certificate_authority.py  pdf_signing.py  pdf_verification.py  rate_limiter.py  storage.py  tsa_client.py
backend/scripts/: generate_api_docs.py  prestart.sh
backend/tests/: conftest.py  test_auth.py  test_certificate_authority.py  test_debug.py  test_error_handling.py  test_file_validators.py  test_health.py  test_migrations.py  test_pdf_signing.py  test_seals_api.py  test_users_api.py
config/: README.md
deploy/: .env.example  docker-compose.yml
docs/: MAINTENANCE_LOG.md  README.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: deploy.sh  dev_backend.sh  dev_frontend.sh  install.sh  test_deploy.sh  validate-docs.sh  verify_deploy.sh
(+110 files in other folders)
