[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service for the monorepo."
authors = ["Monorepo Maintainers <dev@monorepo.local>"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
cryptography = "^42.0.8"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.29"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
psycopg = { version = "^3.1.19", extras = ["binary"] }
email-validator = "^2.1.1"
pyhanko = { version = "^0.25.0", extras = ["image-support"] }
pyhanko-certvalidator = "^0.26.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"
starlette-exporter = "^0.21.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
pypdf = "^5.1.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
preview = true
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
